[package]
name = "nikka-leaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive", "cargo"] }
ctrlc = "3.2.4"
libloading = "0.7.4"
nvml-wrapper = "0.8.0"
nvml-wrapper-sys = "0.6.0"
once_cell = "1.16.0"
