[package]
name = "nikka-leaps"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive", "cargo"] }
ctrlc = "3.2.5"
libloading = "0.7.4"
nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"] }
once_cell = "1.17.1"
