[package]
name = "nikka-leaps"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
ctrlc = "3.4.1"
libloading = "0.8.3"
nvml-wrapper = { version = "0.10.0", features = ["legacy-functions"] }
once_cell = "1.19.0"
